--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <title>Contact Me</title>
 </head>
 <body>
-    <a href="C:\Users\ethan\OneDrive\Documents\WebDevelopment\HTML-PersonalSite\index.html">Back</a>
+    <a href="https://wadokode.github.io/cv/">Back</a>
     <h3>Contact Details:</h3>
     <p>(873)688-4587</p>
     <p>ethan.lt.bradley@gmail.com</p>
