--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </ul>
     <hr>
     <a href="C:\Users\ethan\OneDrive\Documents\WebDevelopment\HTML-PersonalSite\hobbies.html">My Hobbies </a>
-    <a href="/contact.html">Contact Me</a>
+    <a href="contact.html">Contact Me</a>
     <hr>
     <table>
         <thead>
