--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li>I.E.Weldon Secondary School: Diploma with french immersion certificate.</li>
     </ul>
     <hr>
-    <a href="C:\Users\ethan\OneDrive\Documents\WebDevelopment\HTML-PersonalSite\hobbies.html">My Hobbies </a>
+    <a href="hobbies.html">My Hobbies </a>
     <a href="contact.html">Contact Me</a>
     <hr>
     <table>
