--- a/hobbies.html
+++ b/hobbies.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="C:\Users\ethan\OneDrive\Documents\WebDevelopment\HTML-PersonalSite\index.html">Back</a>
+    <a href="https://wadokode.github.io/cv/">Back</a>
     <h3>Hobbies</h3>
     <ol>
         <li> <a href="https://shintani.ca/"> Karate</a></li>
